# neon-frame

./: .gitignore  README.adoc
integration-tests/: .gitignore  README.adoc  jest.config.js  package.json  pnpm-lock.yaml  tsconfig.json
integration-tests/native/: Cargo.toml
integration-tests/native/src/: examples.rs  lib.rs
integration-tests/src/: access.ts  tests.ts
neon-frame/: Cargo.toml
neon-frame-js/: .gitignore  package.json  pnpm-lock.yaml
neon-frame-js/src/: index.ts  types.ts  wrap.ts
neon-frame-macro/: Cargo.toml
neon-frame-macro/src/: lib.rs
neon-frame/src/: lib.rs
