[package]
name = "neon-frame-macro"
version = "0.2.0"
edition = "2021"
authors = ["Emerald Team", "Igor Artamonov"]
license = "Apache-2.0"
repository = "https://github.com/emeraldpay/neon-frame/neon-frame-macro"
documentation = "https://docs.rs/neon-frame-macro"
description = "Macros to simplify writing Neon apps"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
